# AnotherEngine

./: .gitignore  .gitmodules  CMakeLists.txt  DataHolder.h  DefaultWorld.cpp  DefaultWorld.h  LICENSE  README.md  TODO.txt  TODO2.txt  collision.html  glm.natvis  graph.html  imgui.ini  init_default_map.cpp  init_default_map.h  init_world_components.cpp  init_world_components.h  init_world_systems.cpp  init_world_systems.h  main.cpp
include/aoe/: Config.h
include/aoe/common/: Export.h
include/aoe/core/: Component.h  ComponentManager.h  Entity.h  EntityId.h  EntityManager.h  Export.h  FileIndexer.h  System.h  SystemEntity.h  SystemSpawnManager.h  SystemUnspawnManager.h  World.h  WorldData.h  WorldDataProvider.h  WorldDebug.h
include/aoe/data/: ADatabase.h  ALoader.h  Cache.h  Database.h  FormattedInputStream.h  Handle.h
include/aoe/ecs/: Component.h  ComponentManager.h  Entity.h  EntityId.h  EntityManager.h  System.h  SystemEntity.h  SystemSpawnManager.h  SystemUnspawnManager.h  World.h  WorldData.h  WorldDataProvider.h  WorldDebug.h
include/aoe/space/: Export.h  MoveComponent.h  MoveSystem.h  TransformComponent.h  Vector.h
include/aoe/standard/: ADynamicType.h  Allocator.h  Memory.h  MemoryResource.h  PropagateConst.h  TypeFactory.h  TypeRegistry.h  VectorMap.h
include/aoe/sync/: ATask.h  MultiThreadWorker.h  ThreadWorker.h  Worker.h
include/aoe/time/: Chrono.h  Export.h  TimeComponent.h  TimeSystem.h
include/aoe/visitor/: JsonWriter.h  Loader.h  Standard.h  TypeApplicator.h  Utils.h
include/vob/aoe/: api.h
src/aoe/animation/: rig_loader.cpp
src/aoe/core/: ComponentManager.cpp  Entity.cpp  EntityManager.cpp  SystemSpawnManager.cpp  SystemUnspawnManager.cpp
src/aoe/debug/: DebugDevblogSystem.cpp  GhostControllerSystem.cpp  debug_controller.cpp  debug_game_mode_system.cpp  (+1 more)
tools/ShaderExporter/: main.cpp
(+989 files in other folders)
